fix code text color in dark mode.

--- a/assets/styles/input.css
+++ b/assets/styles/input.css
@@ -159,6 +159,7 @@
         Liberation Mono,
         monospace;
     background-color: #e8e8e8;
+    color: black;
     white-space: break-spaces;
     border-radius: 6px;
 }
